<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/internet_not_connected">

        <requestFocus />
    </TextView>

    <Button
        android:id="@+id/btn_open_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtview"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="38dp"
        android:text="@string/open_settings" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_open_settings"
        android:layout_alignBottom="@+id/btn_open_settings"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:text="@string/exit" />

</RelativeLayout>