<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/appbgg"
        android:alpha="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_bar"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/search_bar_string"
                android:padding="10dp"
                bootstrap:bb_icon_right="fa-search"
                bootstrap:be_roundedCorners="true"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_search_white"
                fab:fab_colorNormal="@color/colorPrimaryDark"
                fab:fab_colorPressed="@color/colorPrimary"
                fab:fab_colorRipple="@color/colorPrimary" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdg"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <RadioButton
                android:id="@+id/rb_search_by_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_via_address"
                android:checked="true"
                android:onClick="onRadioButtonClicked" />

            <RadioButton
                android:id="@+id/rb_search_by_no_of_people"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/search_by_no_of_people"
                android:onClick="onRadioButtonClicked" />
        </RadioGroup>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:listSelector="?android:attr/selectableItemBackground"
            android:id="@+id/list">

        </ListView>

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        fab:menu_labels_showAnimation="@anim/bounce"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="@color/colorPrimaryDark"
        fab:menu_colorPressed="@color/colorPrimary"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_search_white"
            android:onClick="onClickMenu1"
            fab:fab_colorNormal="@color/colorPrimaryDark"
            fab:fab_colorPressed="@color/colorPrimary"
            fab:fab_size="mini"
            fab:fab_label="Current Newsfeed" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickMenu2"
            fab:fab_colorNormal="@color/colorPrimaryDark"
            fab:fab_colorPressed="@color/colorPrimary"
            android:src="@mipmap/ic_search_white"
            fab:fab_size="mini"
            fab:fab_label="Organisations near You" />

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>
